--- a/Labs/Lab2/lab2Tasks.html
+++ b/Labs/Lab2/lab2Tasks.html
@@ -28,7 +28,7 @@
     <a href="https://www.napier.ac.uk/">Edinburgh Napier University</a>
     <br>
     <a href="https://www.hrowen.co.uk/aston-martin/used-aston-martin/db9-v12-carbon-coupe-id_500130123.aspx"
-        target="_blank"><img style="width: 800px;height: 600px;" src="Images/Aston Martin VANQUISH.jpg"></a></img>
+        target="_blank"><img style="width: 800px;height: 600px;" src="../Images/Aston Martin VANQUISH.jpg"></a></img>
 
 </body>
 
