Updated HTML to use semantic tags

--- a/Labs/Lab2/indexf1.html
+++ b/Labs/Lab2/indexf1.html
@@ -5,19 +5,21 @@
 </head>
 
 <body>
-    <h1 style="font-family: 'Courier New', Courier, monospace;text-align: center;">Formula 1</h1>
-    <ul style="text-align: center;list-style-type: none;">
-        <li><a href="indexf1.html">Home</a></li>
-        <li><a href="teams.html">Team List</a></li>
-        <li><a href="tracks.html">Track List</a></li>
-    </ul>
-    <p style="font-family: 'Courier New', Courier, monospace;">Formula 1 is the top form of motorsport where, currently,
-        20 of the best drivers in the world battle it out to see who has what it takes to become the next Formula 1
-        champion of the world.</p>
-    <img src="../Images/LH_44.jpg"></img>
-    <br>
-    <caption>Pictured is driver number 44, Lewis Hamilton, leading the 2020 Turkish GP to victory.</caption>
-
+    <main>
+        <h1 style="font-family: 'Courier New', Courier, monospace;text-align: center;">Formula 1</h1>
+        <nav style="text-align: center;list-style-type: none;">
+            <li><a href="indexf1.html">Home</a></li>
+            <li><a href="teams.html">Team List</a></li>
+            <li><a href="tracks.html">Track List</a></li>
+        </nav>
+        <p style="font-family: 'Courier New', Courier, monospace;">Formula 1 is the top form of motorsport where,
+            currently,
+            20 of the best drivers in the world battle it out to see who has what it takes to become the next Formula 1
+            champion of the world.</p>
+        <img src="../Images/LH_44.jpg"></img>
+        <br>
+        <caption>Pictured is driver number 44, Lewis Hamilton, leading the 2020 Turkish GP to victory.</caption>
+    </main>
 </body>
 
 </html>
