added css styling

--- a/Labs/Lab2/tracks.html
+++ b/Labs/Lab2/tracks.html
@@ -2,22 +2,23 @@
 
 <head>
     <title>Formula 1 - Tracks</title>
+    <link rel="stylesheet" href="CSS/stylesheet.css">
 </head>
 
 <body>
     <main>
-        <h1 style="font-family: 'Courier New', Courier, monospace;text-align: center;">Formula 1</h1>
-        <nav style="text-align: center;list-style-type: none;">
-            <li><a href="indexf1.html">Home</a></li>
-            <li><a href="teams.html">Team List</a></li>
-            <li><a href="tracks.html">Track List</a></li>
+        <h1>Formula 1</h1>
+        <nav>
+            <li class="navBar"><a href="indexf1.html">Home</a></li>
+            <li class="navBar"><a href="teams.html">Team List</a></li>
+            <li class="navBar"><a href="tracks.html">Track List</a></li>
         </nav>
         <h2 style="font-family: 'Courier New', Courier, monospace;text-align: center;">Below are all of the 23 countries
             hosting Formula 1 in the 2021 season.</h2>
         <ol style="font-family: 'Courier New', Courier, monospace; text-align: center;list-style-position: inside;">
             <li>Bahrain</li>
             <li>Italy - Imola</li>
-            <li>TBC</li>
+            <li>Portugal</li>
             <li>Spain</li>
             <li>Monaco</li>
             <li>Azerbaijan</li>
