--- a/Labs/Lab2/indexf1.html
+++ b/Labs/Lab2/indexf1.html
@@ -2,23 +2,25 @@
 
 <head>
     <title>Formula 1</title>
+    <link rel="stylesheet" href="CSS/stylesheet.css">
 </head>
 
 <body>
     <main>
-        <h1 style="font-family: 'Courier New', Courier, monospace;text-align: center;">Formula 1</h1>
-        <nav style="text-align: center;list-style-type: none;">
-            <li><a href="indexf1.html">Home</a></li>
-            <li><a href="teams.html">Team List</a></li>
-            <li><a href="tracks.html">Track List</a></li>
+        <h1>Formula 1</h1>
+        <nav>
+            <li class="navBar"><a href="indexf1.html">Home</a></li>
+            <li class="navBar"><a href="teams.html">Team List</a></li>
+            <li class="navBar"><a href="tracks.html">Track List</a></li>
         </nav>
-        <p style="font-family: 'Courier New', Courier, monospace;">Formula 1 is the top form of motorsport where,
+        <p>Formula 1 is the top form of motorsport where,
             currently,
             20 of the best drivers in the world battle it out to see who has what it takes to become the next Formula 1
             champion of the world.</p>
-        <img src="../Images/LH_44.jpg"></img>
-        <br>
-        <caption>Pictured is driver number 44, Lewis Hamilton, leading the 2020 Turkish GP to victory.</caption>
+        <img class="LH44" src="../Images/LH_44.jpg"></img>
+        <!--Tried to use the caption tag but styling would not work-->
+        <p>Pictured is driver number 44, Lewis Hamilton, leading the 2020 Turkish GP to
+            victory. Image from Autosport.com</p>
     </main>
 </body>
 
