--- a/Labs/Lab2/teams.html
+++ b/Labs/Lab2/teams.html
@@ -2,33 +2,39 @@
 
 <head>
     <title>Formula 1 - Teams</title>
+    <link rel="stylesheet" href="CSS/stylesheet.css">
 </head>
 
 <body>
     <main>
-        <h1 style="font-family: 'Courier New', Courier, monospace;text-align: center;">Formula 1</h1>
-        <nav style="text-align: center;list-style-type: none;">
-            <li><a href="indexf1.html">Home</a></li>
-            <li><a href="teams.html">Team List</a></li>
-            <li><a href="tracks.html">Track List</a></li>
+        <h1>Formula 1</h1>
+        <nav>
+            <li class="navBar"><a href="indexf1.html">Home</a></li>
+            <li class="navBar"><a href="teams.html">Team List</a></li>
+            <li class="navBar"><a href="tracks.html">Track List</a></li>
         </nav>
-        <h2 style="font-family: 'Courier New', Courier, monospace;text-align: center;">Here are all 20 Formula 1 teams
+        <h2>Here are all 20 Formula 1 teams
             for
             the upcoming 2021 season.</h2>
-        <!--<img src="../Images/RP20.jpg" style="width: 795px;height: 530px;"></img>
-        <br>
-        <caption>Pictured is the RP20 of former team Racing Point. For the 2021 season they will be Aston Martin Cognizant
-            F1 and will be ditching the pink livery.</caption>-->
-        <ol style="font-family: 'Courier New', Courier, monospace; text-align: center;list-style-position: inside;">
+        <ol>
             <li>Mercedes</li>
+            <br>
             <li>Red Bull Racing Honda</li>
+            <br>
             <li>McLaren Mercedes</li>
+            <br>
             <li>Aston Martin Cognizant</li>
+            <br>
             <li>Alpine</li>
+            <br>
             <li>Ferrari</li>
+            <br>
             <li>AlphaTauri Honda</li>
+            <br>
             <li>Alfa Romeo Racing Ferrari</li>
+            <br>
             <li>HAAS Ferrari</li>
+            <br>
             <li>Williams Mercedes</li>
         </ol>
     </main>
