--- a/Labs/Lab2/tracks.html
+++ b/Labs/Lab2/tracks.html
@@ -13,9 +13,9 @@
             <li class="navBar"><a href="teams.html">Team List</a></li>
             <li class="navBar"><a href="tracks.html">Track List</a></li>
         </nav>
-        <h2 style="font-family: 'Courier New', Courier, monospace;text-align: center;">Below are all of the 23 countries
+        <h2>Below are all of the 23 countries
             hosting Formula 1 in the 2021 season.</h2>
-        <ol style="font-family: 'Courier New', Courier, monospace; text-align: center;list-style-position: inside;">
+        <ol>
             <li>Bahrain</li>
             <li>Italy - Imola</li>
             <li>Portugal</li>
