added css styling and images

--- a/Labs/Lab3/index.html
+++ b/Labs/Lab3/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <header>
-    <title>Practice</title>
+    <title>Video Games & F1 Drivers</title>
+    <link rel="stylesheet" href="CSS/stylesheet.css">
 </header>
 
 <body>
@@ -15,7 +16,10 @@
                 <li>The Last of Us</li>
                 <li>Unchartered 2</li>
             </ol>
+            <img class="unchartered4Image" src="../Images/unchartered4.jpg">
+            <p>Unchartered 4: A Thiefs End Wallpaper Art. Wallpaper from WallpaperCave.com</p>
         </section>
+
         <h1>Formula 1</h1>
         <section>
             <h3>My Top 5 Drivers of the 2020 Season</h3>
@@ -26,6 +30,8 @@
                 <li>Charles Leclerc</li>
                 <li>George Russell</li>
             </ol>
+            <img src="../Images/LH_44_Champion.jpg">
+            <p>Lewis Hamilton after securing his 7th world title. Image from talksport.com</p>
         </section>
     </main>
 </body>
