Fixed image location

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             currently,
             20 of the best drivers in the world battle it out to see who has what it takes to become the next Formula 1
             champion of the world.</p>
-        <img class="LH44" src="../Images/LH_44.jpg"></img>
+        <img class="LH44" src="Images/LH_44.jpg"></img>
         <!--Tried to use the caption tag but styling would not work-->
         <p>Pictured is driver number 44, Lewis Hamilton, leading the 2020 Turkish GP to
             victory. Image from Autosport.com</p>
