--- a/tracks.html
+++ b/tracks.html
@@ -9,7 +9,7 @@
     <main>
         <h1>Formula 1</h1>
         <nav>
-            <li class="navBar"><a href="indexf1.html">Home</a></li>
+            <li class="navBar"><a href="index.html">Home</a></li>
             <li class="navBar"><a href="teams.html">Team List</a></li>
             <li class="navBar"><a href="tracks.html">Track List</a></li>
         </nav>
