Lab5 + Updates to previous labs

--- a/Labs/Lab2/index.html
+++ b/Labs/Lab2/index.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
+<html lang="en">
 
-<head>
-    <title>Formula 1</title>
-    <link rel="stylesheet" href="CSS/stylesheet.css">
-</head>
+    <head>
+        <title>Formula 1</title>
+        <link rel="stylesheet" href="CSS/stylesheet.css">
+    </head>
 
-<body>
-    <main>
-        <h1>Formula 1</h1>
-        <nav>
-            <li class="navBar"><a href="index.html">Home</a></li>
-            <li class="navBar"><a href="teams.html">Team List</a></li>
-            <li class="navBar"><a href="tracks.html">Track List</a></li>
-        </nav>
-        <p>Formula 1 is the top form of motorsport where,
-            currently,
-            20 of the best drivers in the world battle it out to see who has what it takes to become the next Formula 1
-            champion of the world.</p>
-        <img class="LH44" src="../Images/LH_44.jpg"></img>
-        <!--Tried to use the caption tag but styling would not work-->
-        <p>Pictured is driver number 44, Lewis Hamilton, leading the 2020 Turkish GP to
-            victory. Image from Autosport.com</p>
-    </main>
-</body>
+    <body>
+        <main>
+            <h1>Formula 1</h1>
+            <nav>
+                <li class="navBar"><a href="index.html">Home</a></li>
+                <li class="navBar"><a href="teams.html">Team List</a></li>
+                <li class="navBar"><a href="tracks.html">Track List</a></li>
+            </nav>
+            <p>Formula 1 is the top form of motorsport where,
+                currently,
+                20 of the best drivers in the world battle it out to see who has what it takes to become the next
+                Formula 1
+                champion of the world.</p>
+            <img class="LH44" src="../Images/LH_44.jpg"></img>
+            <!--Tried to use the caption tag but styling would not work-->
+            <p>Pictured is driver number 44, Lewis Hamilton, leading the 2020 Turkish GP to
+                victory. Image from Autosport.com</p>
+        </main>
+    </body>
 
 </html>
