--- a/Labs/Lab2/tracks.html
+++ b/Labs/Lab2/tracks.html
@@ -1,46 +1,47 @@
 <!DOCTYPE html>
+<html lang="en">
 
-<head>
-    <title>Formula 1 - Tracks</title>
-    <link rel="stylesheet" href="CSS/stylesheet.css">
-</head>
+    <head>
+        <title>Formula 1 - Tracks</title>
+        <link rel="stylesheet" href="CSS/stylesheet.css">
+    </head>
 
-<body>
-    <main>
-        <h1>Formula 1</h1>
-        <nav>
-            <li class="navBar"><a href="index.html">Home</a></li>
-            <li class="navBar"><a href="teams.html">Team List</a></li>
-            <li class="navBar"><a href="tracks.html">Track List</a></li>
-        </nav>
-        <h2>Below are all of the 23 countries
-            hosting Formula 1 in the 2021 season.</h2>
-        <ol>
-            <li>Bahrain</li>
-            <li>Italy - Imola</li>
-            <li>Portugal</li>
-            <li>Spain</li>
-            <li>Monaco</li>
-            <li>Azerbaijan</li>
-            <li>Canada</li>
-            <li>France</li>
-            <li>Austria</li>
-            <li>United Kingdom</li>
-            <li>Hungary</li>
-            <li>Belgium</li>
-            <li>Netherlands</li>
-            <li>Italy - Monza</li>
-            <li>Russia</li>
-            <li>Singapore</li>
-            <li>Japan</li>
-            <li>USA</li>
-            <li>Mexico</li>
-            <li>Brazil</li>
-            <li>Australia</li>
-            <li>Saudi Arabia</li>
-            <li>Abu Dhabi</li>
-        </ol>
-    </main>
-</body>
+    <body>
+        <main>
+            <h1>Formula 1</h1>
+            <nav>
+                <li class="navBar"><a href="index.html">Home</a></li>
+                <li class="navBar"><a href="teams.html">Team List</a></li>
+                <li class="navBar"><a href="tracks.html">Track List</a></li>
+            </nav>
+            <h2>Below are all of the 23 countries
+                hosting Formula 1 in the 2021 season.</h2>
+            <ol>
+                <li>Bahrain</li>
+                <li>Italy - Imola</li>
+                <li>Portugal</li>
+                <li>Spain</li>
+                <li>Monaco</li>
+                <li>Azerbaijan</li>
+                <li>Canada</li>
+                <li>France</li>
+                <li>Austria</li>
+                <li>United Kingdom</li>
+                <li>Hungary</li>
+                <li>Belgium</li>
+                <li>Netherlands</li>
+                <li>Italy - Monza</li>
+                <li>Russia</li>
+                <li>Singapore</li>
+                <li>Japan</li>
+                <li>USA</li>
+                <li>Mexico</li>
+                <li>Brazil</li>
+                <li>Australia</li>
+                <li>Saudi Arabia</li>
+                <li>Abu Dhabi</li>
+            </ol>
+        </main>
+    </body>
 
 </html>
