--- a/Labs/Lab3/index.html
+++ b/Labs/Lab3/index.html
@@ -1,39 +1,40 @@
 <!DOCTYPE html>
-<header>
-    <title>Video Games & F1 Drivers</title>
-    <link rel="stylesheet" href="CSS/stylesheet.css">
-</header>
+<html lang="en">
+    <header>
+        <title>Video Games & F1 Drivers</title>
+        <link rel="stylesheet" href="CSS/stylesheet.css">
+    </header>
 
-<body>
-    <main>
-        <h1>Video Games</h1>
-        <section>
-            <h3>My Top 5 Video Games</h3>
-            <ol>
-                <li>Unchartered 4</li>
-                <li>Red Dead Redemption 2</li>
-                <li>Horizon Zero Dawn</li>
-                <li>The Last of Us</li>
-                <li>Unchartered 2</li>
-            </ol>
-            <img class="unchartered4Image" src="../Images/unchartered4.jpg">
-            <p>Unchartered 4: A Thiefs End Wallpaper Art. Wallpaper from WallpaperCave.com</p>
-        </section>
+    <body>
+        <main>
+            <h1>Video Games</h1>
+            <section>
+                <h3>My Top 5 Video Games</h3>
+                <ol>
+                    <li>Unchartered 4</li>
+                    <li>Red Dead Redemption 2</li>
+                    <li>Horizon Zero Dawn</li>
+                    <li>The Last of Us</li>
+                    <li>Unchartered 2</li>
+                </ol>
+                <img class="unchartered4Image" src="../Images/unchartered4.jpg">
+                <p>Unchartered 4: A Thiefs End Wallpaper Art. Wallpaper from WallpaperCave.com</p>
+            </section>
 
-        <h1>Formula 1</h1>
-        <section>
-            <h3>My Top 5 Drivers of the 2020 Season</h3>
-            <ol>
-                <li>Lewis Hamilton</li>
-                <li>Sergio Perez</li>
-                <li>Daniel Ricciardo</li>
-                <li>Charles Leclerc</li>
-                <li>George Russell</li>
-            </ol>
-            <img src="../Images/LH_44_Champion.jpg">
-            <p>Lewis Hamilton after securing his 7th world title. Image from talksport.com</p>
-        </section>
-    </main>
-</body>
+            <h1>Formula 1</h1>
+            <section>
+                <h3>My Top 5 Drivers of the 2020 Season</h3>
+                <ol>
+                    <li>Lewis Hamilton</li>
+                    <li>Sergio Perez</li>
+                    <li>Daniel Ricciardo</li>
+                    <li>Charles Leclerc</li>
+                    <li>George Russell</li>
+                </ol>
+                <img src="../Images/LH_44_Champion.jpg">
+                <p>Lewis Hamilton after securing his 7th world title. Image from talksport.com</p>
+            </section>
+        </main>
+    </body>
 
 </html>
