--- a/Labs/Lab2/lab2.html
+++ b/Labs/Lab2/lab2.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
+<html lang="en">
 
-<head>
-    <title>SET08101 - Headings</title>
-</head>
+    <head>
+        <title>SET08101 - Headings</title>
+    </head>
 
-<body>
-    <h1 style="text-align: center">A very important Heading</h1>
-    <img src="Images/Aston Martin VANQUISH.jpg" />
-    <a href="https://github.com/CamyH">My GitHub</a>
-</body>
+    <body>
+        <h1 style="text-align: center">A very important Heading</h1>
+        <img src="Images/Aston Martin VANQUISH.jpg" />
+        <a href="https://github.com/CamyH">My GitHub</a>
+    </body>
 
 </html>
