--- a/Labs/Lab2/lab2Tasks.html
+++ b/Labs/Lab2/lab2Tasks.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
+<html lang="en">
 
-<head>
-    <title>Lab 2 Tasks</title>
-</head>
+    <head>
+        <title>Lab 2 Tasks</title>
+    </head>
 
-<body>
-    <h1>5 Favourite Websites</h1>
-    <a href="index.html">Index Webpage</a>
-    <br>
-    <a href="https://github.com/"> Website 1: GitHub</a>
-    <br>
-    <a href="https://steamcommunity.com/"> Website 2: Steam</a>
-    <br>
-    <a href="https://www.twitch.tv/"> Website 3: Twitch</a>
-    <br>
-    <a href="https://www.playstation.com/en-gb/"> Website 4: PlayStation</a>
-    <br>
-    <a href="https://en.wikipedia.org/wiki/Main_Page"> Website 5: Wikipedia</a>
+    <body>
+        <h1>5 Favourite Websites</h1>
+        <a href="index.html">Index Webpage</a>
+        <br>
+        <a href="https://github.com/"> Website 1: GitHub</a>
+        <br>
+        <a href="https://steamcommunity.com/"> Website 2: Steam</a>
+        <br>
+        <a href="https://www.twitch.tv/"> Website 3: Twitch</a>
+        <br>
+        <a href="https://www.playstation.com/en-gb/"> Website 4: PlayStation</a>
+        <br>
+        <a href="https://en.wikipedia.org/wiki/Main_Page"> Website 5: Wikipedia</a>
 
-    <p>Web Tech is a module that is run in the School of
-        Computing at Edinburgh Napier University.</p>
+        <p>Web Tech is a module that is run in the School of
+            Computing at Edinburgh Napier University.</p>
 
-    <a href="https://github.com/siwells/set08101">Web Tech</a>
-    <br>
-    <a href="https://www.napier.ac.uk/about-us/our-schools/school-of-computing">School of Computing</a>
-    <br>
-    <a href="https://www.napier.ac.uk/">Edinburgh Napier University</a>
-    <br>
-    <a href="https://www.hrowen.co.uk/aston-martin/used-aston-martin/db9-v12-carbon-coupe-id_500130123.aspx"
-        target="_blank"><img style="width: 800px;height: 600px;" src="../Images/Aston Martin VANQUISH.jpg"></a></img>
+        <a href="https://github.com/siwells/set08101">Web Tech</a>
+        <br>
+        <a href="https://www.napier.ac.uk/about-us/our-schools/school-of-computing">School of Computing</a>
+        <br>
+        <a href="https://www.napier.ac.uk/">Edinburgh Napier University</a>
+        <br>
+        <a href="https://www.hrowen.co.uk/aston-martin/used-aston-martin/db9-v12-carbon-coupe-id_500130123.aspx"
+            target="_blank"><img style="width: 800px;height: 600px;"
+                src="../Images/Aston Martin VANQUISH.jpg"></a></img>
 
-</body>
+    </body>
 
 </html>
