--- a/Labs/Lab2/teams.html
+++ b/Labs/Lab2/teams.html
@@ -1,43 +1,44 @@
 <!DOCTYPE html>
+<html lang="en">
 
-<head>
-    <title>Formula 1 - Teams</title>
-    <link rel="stylesheet" href="CSS/stylesheet.css">
-</head>
+    <head>
+        <title>Formula 1 - Teams</title>
+        <link rel="stylesheet" href="CSS/stylesheet.css">
+    </head>
 
-<body>
-    <main>
-        <h1>Formula 1</h1>
-        <nav>
-            <li class="navBar"><a href="index.html">Home</a></li>
-            <li class="navBar"><a href="teams.html">Team List</a></li>
-            <li class="navBar"><a href="tracks.html">Track List</a></li>
-        </nav>
-        <h2>Here are all 20 Formula 1 teams
-            for
-            the upcoming 2021 season.</h2>
-        <ol>
-            <li>Mercedes</li>
-            <br>
-            <li>Red Bull Racing Honda</li>
-            <br>
-            <li>McLaren Mercedes</li>
-            <br>
-            <li>Aston Martin Cognizant</li>
-            <br>
-            <li>Alpine</li>
-            <br>
-            <li>Ferrari</li>
-            <br>
-            <li>AlphaTauri Honda</li>
-            <br>
-            <li>Alfa Romeo Racing Ferrari</li>
-            <br>
-            <li>HAAS Ferrari</li>
-            <br>
-            <li>Williams Mercedes</li>
-        </ol>
-    </main>
-</body>
+    <body>
+        <main>
+            <h1>Formula 1</h1>
+            <nav>
+                <li class="navBar"><a href="index.html">Home</a></li>
+                <li class="navBar"><a href="teams.html">Team List</a></li>
+                <li class="navBar"><a href="tracks.html">Track List</a></li>
+            </nav>
+            <h2>Here are all 20 Formula 1 teams
+                for
+                the upcoming 2021 season.</h2>
+            <ol>
+                <li>Mercedes</li>
+                <br>
+                <li>Red Bull Racing Honda</li>
+                <br>
+                <li>McLaren Mercedes</li>
+                <br>
+                <li>Aston Martin Cognizant</li>
+                <br>
+                <li>Alpine</li>
+                <br>
+                <li>Ferrari</li>
+                <br>
+                <li>AlphaTauri Honda</li>
+                <br>
+                <li>Alfa Romeo Racing Ferrari</li>
+                <br>
+                <li>HAAS Ferrari</li>
+                <br>
+                <li>Williams Mercedes</li>
+            </ol>
+        </main>
+    </body>
 
 </html>
