new image + two pages updated to use grid layout

--- a/Labs/Lab2/index.html
+++ b/Labs/Lab2/index.html
@@ -14,15 +14,20 @@
                 <li class="navBar"><a href="teams.html">Team List</a></li>
                 <li class="navBar"><a href="tracks.html">Track List</a></li>
             </nav>
-            <p>Formula 1 is the top form of motorsport where,
-                currently,
-                20 of the best drivers in the world battle it out to see who has what it takes to become the next
-                Formula 1
-                champion of the world.</p>
-            <img class="LH44" src="../Images/LH_44.jpg"></img>
-            <!--Tried to use the caption tag but styling would not work-->
-            <p>Pictured is driver number 44, Lewis Hamilton, leading the 2020 Turkish GP to
-                victory. Image from Autosport.com</p>
+            <div class="grid-container-index">
+                <p class="grid-item1">Formula 1 is the top form of motorsport where,
+                    currently,
+                    20 of the best drivers in the world battle it out to see who has what it takes to become the next
+                    Formula 1
+                    champion of the world.</p>
+                <img id="LH44" class="grid-image1" src="../Images/LH_44.jpg"></img>
+                <!--Tried to use the caption tag but styling would not work-->
+                <p class="grid-item2">Pictured is driver number 44, Lewis Hamilton, leading the 2020 Turkish GP to
+                    victory. Image from Autosport.com</p>
+                <img id="GaslySainzMonza" class="grid-image2" src="../Images/GaslySainzMonza20.jpg"></img>
+                <p class="grid-item3">Pictured is Alpha Tauri driver Pierre Gasly holding off McLaren driver Carlos
+                    Sainz to take his maiden win at the 2020 Italian GP. Image from Motorsportmagazine.com.</p>
+            </div>
         </main>
     </body>
 
