--- a/Labs/Lab2/teams.html
+++ b/Labs/Lab2/teams.html
@@ -17,27 +17,29 @@
             <h2>Here are all 20 Formula 1 teams
                 for
                 the upcoming 2021 season.</h2>
-            <ol>
-                <li>Mercedes</li>
-                <br>
-                <li>Red Bull Racing Honda</li>
-                <br>
-                <li>McLaren Mercedes</li>
-                <br>
-                <li>Aston Martin Cognizant</li>
-                <br>
-                <li>Alpine</li>
-                <br>
-                <li>Ferrari</li>
-                <br>
-                <li>AlphaTauri Honda</li>
-                <br>
-                <li>Alfa Romeo Racing Ferrari</li>
-                <br>
-                <li>HAAS Ferrari</li>
-                <br>
-                <li>Williams Mercedes</li>
-            </ol>
+            <div class="grid-container-teams">
+                <ol>
+                    <li class="grid-items-teams">Mercedes</li>
+                    <br>
+                    <li class="grid-items-teams">Red Bull Racing Honda</li>
+                    <br>
+                    <li class="grid-items-teams">McLaren Mercedes</li>
+                    <br>
+                    <li class="grid-items-teams">Aston Martin Cognizant</li>
+                    <br>
+                    <li class="grid-items-teams">Alpine</li>
+                    <br>
+                    <li class="grid-items-teams">Ferrari</li>
+                    <br>
+                    <li class="grid-items-teams">AlphaTauri Honda</li>
+                    <br>
+                    <li class="grid-items-teams">Alfa Romeo Racing Ferrari</li>
+                    <br>
+                    <li class="grid-items-teams">HAAS Ferrari</li>
+                    <br>
+                    <li class="grid-items-teams">Williams Mercedes</li>
+                </ol>
+            </div>
         </main>
     </body>
 
