Implemented grid layout to web pages

--- a/tracks.html
+++ b/tracks.html
@@ -1,46 +1,49 @@
 <!DOCTYPE html>
+<html lang="en">
 
-<head>
-    <title>Formula 1 - Tracks</title>
-    <link rel="stylesheet" href="CSS/stylesheet.css">
-</head>
+    <head>
+        <title>Formula 1 - Tracks</title>
+        <link rel="stylesheet" href="CSS/stylesheet.css">
+    </head>
 
-<body>
-    <main>
-        <h1>Formula 1</h1>
-        <nav>
-            <li class="navBar"><a href="index.html">Home</a></li>
-            <li class="navBar"><a href="teams.html">Team List</a></li>
-            <li class="navBar"><a href="tracks.html">Track List</a></li>
-        </nav>
-        <h2>Below are all of the 23 countries
-            hosting Formula 1 in the 2021 season.</h2>
-        <ol>
-            <li>Bahrain</li>
-            <li>Italy - Imola</li>
-            <li>Portugal</li>
-            <li>Spain</li>
-            <li>Monaco</li>
-            <li>Azerbaijan</li>
-            <li>Canada</li>
-            <li>France</li>
-            <li>Austria</li>
-            <li>United Kingdom</li>
-            <li>Hungary</li>
-            <li>Belgium</li>
-            <li>Netherlands</li>
-            <li>Italy - Monza</li>
-            <li>Russia</li>
-            <li>Singapore</li>
-            <li>Japan</li>
-            <li>USA</li>
-            <li>Mexico</li>
-            <li>Brazil</li>
-            <li>Australia</li>
-            <li>Saudi Arabia</li>
-            <li>Abu Dhabi</li>
-        </ol>
-    </main>
-</body>
+    <body>
+        <main>
+            <h1>Formula 1</h1>
+            <nav>
+                <li class="navBar"><a href="index.html">Home</a></li>
+                <li class="navBar"><a href="teams.html">Team List</a></li>
+                <li class="navBar"><a href="tracks.html">Track List</a></li>
+            </nav>
+            <h2>Below are all of the 23 countries
+                hosting Formula 1 in the 2021 season.</h2>
+            <div class="grid-container-tracks">
+                <ol>
+                    <li class="grid-items-tracks1">Bahrain</li>
+                    <li class="grid-items-tracks2">Italy - Imola</li>
+                    <li class="grid-items-tracks3">Portugal</li>
+                    <li class="grid-items-tracks4">Spain</li>
+                    <li class="grid-items-tracks5">Monaco</li>
+                    <li class="grid-items-tracks6">Azerbaijan</li>
+                    <li class="grid-items-tracks7">Canada</li>
+                    <li class="grid-items-tracks8">France</li>
+                    <li class="grid-items-tracks9">Austria</li>
+                    <li class="grid-items-tracks10">United Kingdom</li>
+                    <li class="grid-items-tracks11">Hungary</li>
+                    <li class="grid-items-tracks12">Belgium</li>
+                    <li class="grid-items-tracks13">Netherlands</li>
+                    <li class="grid-items-tracks14">Italy - Monza</li>
+                    <li class="grid-items-tracks15">Russia</li>
+                    <li class="grid-items-tracks16">Singapore</li>
+                    <li class="grid-items-tracks17">Japan</li>
+                    <li class="grid-items-tracks18">USA</li>
+                    <li class="grid-items-tracks19">Mexico</li>
+                    <li class="grid-items-tracks20">Brazil</li>
+                    <li class="grid-items-tracks21">Australia</li>
+                    <li class="grid-items-tracks22">Saudi Arabia</li>
+                    <li class="grid-items-tracks23">Abu Dhabi</li>
+                </ol>
+            </div>
+        </main>
+    </body>
 
 </html>
