--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                     20 of the best drivers in the world battle it out to see who has what it takes to become the next
                     Formula 1
                     champion of the world.</p>
-                <img id="LH44" class="grid-image1" src="../Images/LH_44.jpg"></img>
+                <img id="LH44" class="grid-image1" src="Images/LH_44.jpg"></img>
                 <!--Tried to use the caption tag but styling would not work-->
                 <p class="grid-item2">Pictured is driver number 44, Lewis Hamilton, leading the 2020 Turkish GP to
                     victory. Image from Autosport.com</p>
-                <img id="GaslySainzMonza" class="grid-image2" src="../Images/GaslySainzMonza20.jpg"></img>
+                <img id="GaslySainzMonza" class="grid-image2" src="Images/GaslySainzMonza20.jpg"></img>
                 <p class="grid-item3">Pictured is Alpha Tauri driver Pierre Gasly holding off McLaren driver Carlos
                     Sainz to take his maiden win at the 2020 Italian GP. Image from Motorsportmagazine.com.</p>
             </div>
