ReplaceCharacters of string task WIP

--- a/Labs/Lab7/external.html
+++ b/Labs/Lab7/external.html
@@ -5,12 +5,17 @@
         <title>SET08101 - External JavaScript</title>
         <script src="JS/hello.js"></script>
         <script src="JS/angleIdentification.js"></script>
+        <script src="JS/replaceChars.js"></script>
     </head>
 
     <body>
         <p><a href="#" onClick="helloFunction();">Click Me</a></p>
 
-        <P><a href="#" onClick="userInput();">Click me to find the type of angle.</a></P>
+        <p><a href="#" onClick="userInput();">Click me to find the type of angle.</a></p>
+
+        <p><a href="#" onClick="input();">Click me to replace characters in a string.</a></p>
+
+        <p id="demo"></p>
     </body>
 
 </html>
