--- a/Labs/Lab5/grid2.html
+++ b/Labs/Lab5/grid2.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <h1>Gird Lines</h1>
+        <h1>Grid Lines</h1>
 
         <div class="grid-container">
             <div class="item1">1</div>
